--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 <head>
     <title>ngScientificNotation</title>
-    <link href='//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/cyborg/bootstrap.min.css'/>
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/flatly/bootstrap.min.css" rel="stylesheet">
     <style>
 input{
     border: 1px black solid;
     border-radius: 2px;
-    padding: 5px;
+    padding: 15px;
+}
+code{
+    color: red;
 }
 span.results{
     text-decoration: underline;
 
 }
+
     </style>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
     <script type="text/javascript">
@@ -58,16 +62,17 @@ span.results{
             $scope.params.fractions = 3
         }])
     &lt;/script&gt;
+
     &lt;script src="scientific-notation.js"&gt;&lt;/script&gt;
      &lt;body ng-app="ngScientificNotation" class=''&gt;
-    &lt;div ng-controller="exampleCtrl"&gt;
+     &lt;div ng-controller="exampleCtrl"&gt;
        &lt;label&gt;Decimal places to include&lt;/label&gt;&lt;input type='number' ng-model='params.decimals'/&gt;
        Minimum mantissa size to format on &lt;input type='numer' ng-model='params.fractions'/&gt;        
         &lt;div ng-repeat="number in numbers"&gt;
             &lt;input type='number' style='width:20%;' ng-model='number.value'&gt;&lt;/span&gt; &lt;span&gt;&rarr; 
             &lt;span class='results' ng-bind="number.value | scientificNotation:{decimals:params.decimals, fraction:params.fractions}"&gt;&lt;/span&gt;&lt;/span&gt;
         &lt;/div&gt;
-    &lt;/div&gt;
+     &lt;/div&gt;
     &lt;/body&gt;
 
         </code>
